Updating bp in accordance with current poc project state

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,30 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": "next",
+    "rules": {
+        "semi": "off",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "off",
+            {
+                // "ignoreRestSiblings": true
+            }
+        ],
+        "react/jsx-filename-extension": [
+            "warn",
+            {
+                "extensions": [".jsx", ".tsx"]
+            }
+        ],
+        "react/prop-types": "off",
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "off",
+        "no-shadow": [
+            "error",
+            {
+                "builtinGlobals": false,
+                "hoist": "functions",
+                "allow": []
+            }
+        ]
+    }
 }
