--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "graphql-ws": "^5.16.0",
         "gsap": "^3.12.5",
         "js-cookie": "^3.0.5",
-        "next": "14.0.4",
+        "next": "^14.2.20",
         "react": "^18",
         "react-dom": "^18",
         "react-helmet": "^6.1.0",
