--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
         "test:watch": "jest --watch"
     },
     "dependencies": {
-        "@apollo/client": "^3.9.10",
-        "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.5",
+        "@apollo/client": "^3.12.4",
+        "@apollo/experimental-nextjs-app-support": "^0.11.8",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@gsap/react": "^2.1.1",
-        "@mui/icons-material": "^5.15.15",
-        "@mui/material": "^5.15.15",
-        "@reduxjs/toolkit": "^2.2.2",
-        "axios": "^1.6.8",
+        "@mui/icons-material": "^6.3.1",
+        "@mui/material": "^6.3.1",
+        "@reduxjs/toolkit": "^2.5.0",
+        "axios": "^1.7.9",
         "bootstrap": "^5.3.3",
         "cookies": "^0.9.1",
-        "graphql": "^16.8.1",
+        "graphql": "^16.10.0",
         "graphql-ws": "^5.16.0",
         "gsap": "^3.12.5",
         "js-cookie": "^3.0.5",
-        "next": "^14.2.20",
-        "react": "^18",
-        "react-dom": "^18",
-        "react-helmet": "^6.1.0",
+        "next": "^15.1.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "react-markdown": "^8.0.7",
-        "react-redux": "^9.1.0",
-        "react-syntax-highlighter": "^15.5.0",
+        "react-redux": "^9.2.0",
+        "react-syntax-highlighter": "^15.6.1",
         "react-transition-group": "^4.4.5"
     },
     "devDependencies": {
@@ -39,13 +39,12 @@
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
         "@types/jest": "^29.5.13",
-        "@types/node": "20.11.30",
-        "@types/react": "18.2.73",
-        "eslint": "^8",
-        "eslint-config-next": "14.0.4",
+        "@types/node": "^22.10.5",
+        "@types/react": "^19.0.3",
+        "eslint": "^9.17.0",
+        "eslint-config-next": "^15.1.3",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "mini-css-extract-plugin": "^2.8.1",
         "sass": "^1.72.0",
         "ts-jest": "^29.2.5"
     }
